src/test/deca/syntax/invalid/provided/include_circulaire.deca
#include "include_circulaire.deca"